# JANUS

./: .clang-format  .clang-tidy  .clangd  .gitignore  .lldbinit  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  debug_kernel.lldb
arch/: CMakeLists.txt  README.md
arch/x86_64/: CMakeLists.txt
boot/: CMakeLists.txt  README.md  boot.asm  multiboot.asm
boot/include/boot/: multiboot.h
docs/preprocessors/mdbook-side-notes/: Cargo.toml  README.md
docs/preprocessors/mdbook-side-notes/src/: lib.rs  main.rs
drivers/: CMakeLists.txt  README.md
kernel/: CMakeLists.txt  README.md  main.c
kernel/_start/: CMakeLists.txt  README.md
kernel/_start/aarch64/: CMakeLists.txt  README.md
kernel/_start/aarch64/limine/: entry.S  linker.ld
kernel/_start/common/: limine_requests.c
kernel/_start/x86_64/: CMakeLists.txt  README.md
kernel/_start/x86_64/common/: gdt64.asm
kernel/_start/x86_64/limine/: entry.asm  linker.ld  requests.asm
kernel/_start/x86_64/multiboot2/: CMakeLists.txt  boot.asm  entry.asm  header.asm  link.ld  linker.ld  multiboot2.asm  paging.asm
kernel/arch/: CMakeLists.txt  README.md
kernel/arch/include/arch/: cpu.h  io.h
kernel/arch/x86_64/: CMakeLists.txt  cpu.c  io.c
kernel/asm/: ADDING_ARCH.md  CMakeLists.txt  README.md
kernel/asm/aarch64/include/asm/: barriers.h  cpu.h  regs.h  tlb.h
kernel/asm/include/asm/: barriers.h  capabilities.h  cpu.h  dt.h  exception_stack.h  interrupt_vectors.h  io.h  regs.h  segment_descriptors.h  tlb.h
kernel/asm/x86_64/include/asm/: barriers.h  cpu.h  io.h  regs.h  tlb.h
kernel/boot/: CMakeLists.txt  README.md  boot.asm  multiboot.asm
kernel/boot/include/boot/: handoff.h  multiboot.h  multiboot2.h  protocols.h  verify.h
kernel/boot/x86_64/multiboot2/: CMakeLists.txt  boot.asm  verify.c
kernel/core/: CMakeLists.txt  README.md  linker.ld  main.c
kernel/core/kio/: CMakeLists.txt  README.md
kernel/core/kio/arch/aarch64/: halt.c
kernel/core/kio/arch/x86_64/: halt.c
kernel/core/kio/include/kio/: die.h  kio.h  output.h
kernel/core/kio/src/: die.c  kio.c  output.c
kernel/core/x86_64/multiboot2/: linker.ld
kernel/drivers/: CMakeLists.txt  README.md
kernel/drivers/include/drivers/: .gitkeep  serial.h  uart.h  vga_text.h
kernel/drivers/serial/: serial.c
kernel/drivers/uart/: uart.c
kernel/drivers/video/: vga_text.c
kernel/include/: README.md
kernel/include/boot/: memmap.h
kernel/include/janus/: README.md  attributes.h  config.h.in  errno.h  types.h  va_arg.h  version.h
kernel/include/tinyos/: attributes.h  compiler.h  config.h.in  types.h
kernel/include/uapi/: README.md  types.h
kernel/kmain/: CMakeLists.txt  README.md  banner.c  init.c  main.c
kernel/kmain/internal/kmain/: banner.h  console.h  fault_test.h  init.h  kernel_descriptor.h  kpanic.h  output_sink.h
kernel/kmain/src/: banner.c  console.c  fault_test.c  init.c  kpanic.c  main.c  output_sink.c
kernel/lib/: CMakeLists.txt  README.md
kernel/lib/buffer/: CMakeLists.txt  README.md
kernel/lib/display/: CMakeLists.txt  README.md
kernel/lib/display/include/display/: display.h  fb.h
kernel/lib/display/src/: fb.c
kernel/lib/fio/: CMakeLists.txt
kernel/lib/fmt/: CMakeLists.txt  README.md
kernel/lib/fmt/include/fmt/: output.h
kernel/lib/fmt/src/: output.c
kernel/lib/gfx/: CMakeLists.txt  README.md
kernel/lib/gfx/include/gfx/: draw.h  surface.h
kernel/lib/gfx/src/: draw.c
kernel/lib/memory/: CMakeLists.txt  README.md  memory.c
kernel/lib/memory/include/lib/: memory.h
kernel/lib/page_tables/: CMakeLists.txt  README.md
kernel/lib/page_tables/arch/aarch64/: mmu.c
kernel/lib/page_tables/arch/x86_64/: mmu.c
kernel/lib/page_tables/include/page_tables/: mmu.h
kernel/mm/: CMakeLists.txt
kernel/subsys/: CMakeLists.txt  README.md
kernel/subsys/boot/: CMakeLists.txt  README.md  info.c  verify.c
kernel/subsys/boot/arch/: CMakeLists.txt
kernel/subsys/boot/arch/aarch64/: requests.c
kernel/subsys/boot/arch/x86_64/: CMakeLists.txt  requests.c
kernel/subsys/boot/include/boot/: arch_requests.h  context.h  info.h  verify.h
kernel/subsys/boot/internal/protocol/: limine.h  multiboot2.h
kernel/subsys/boot/protocol/: limine.h
kernel/subsys/boot/protocol/limine/: CMakeLists.txt  README.md  limine_boot.c  limine_protocol.h
kernel/subsys/boot/protocol/multiboot2/: CMakeLists.txt  README.md  multiboot2_boot.c  multiboot2_protocol.h
kernel/subsys/boot/src/: info.c
kernel/subsys/contracts/: CMakeLists.txt  README.md
kernel/subsys/drivers/: CMakeLists.txt  README.md  tty.c  uart.c  vga_text.c
kernel/subsys/drivers/arch/: CMakeLists.txt
kernel/subsys/drivers/arch/aarch64/: CMakeLists.txt  console.c  mmu.c  serial.c  tty.c
kernel/subsys/drivers/arch/shared/: fb_console.c  framebuffer.c
kernel/subsys/drivers/arch/x86_64/: console.c  (+6 more)
kernel/subsys/drivers/src/: console.c  serial.c  tty.c
kernel/subsys/interrupts/: CMakeLists.txt  README.md
kernel/subsys/interrupts/arch/: CMakeLists.txt
kernel/subsys/interrupts/src/: init.c  interrupts.c
kernel/subsys/mm/: CMakeLists.txt  README.md
kernel/subsys/mm/src/: pmm.c
kernel/tests/: CMakeLists.txt
kernel/tests/smoke/: README.md  profiles.lua  run_smoke.lua
lib/libkbuffer/: CMakeLists.txt
lib/libkio/: CMakeLists.txt
lib/libkstd/: CMakeLists.txt
lib/memory/: CMakeLists.txt  memory.c
lib/memory/include/lib/: memory.h
lib/types/: CMakeLists.txt  README.md
lib/types/include/lib/: types.h
memman/: CMakeLists.txt
memoryman/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tools/: CMakeLists.txt  README.md  psf2c.c
tools/cmake/: Registry.cmake  Tool.cmake  ToolLib.cmake
tools/lib/clap/: CMakeLists.txt  DESIGN.md  IMPL.md  README.md
tools/lib/clap/src/: clap.c  help.c  help.h
tools/lib/clap/tests/: CMakeLists.txt  clap_test.cpp
tools/psf2c/: CLAP_MIGRATION.md  CMakeLists.txt  README.md  psf.h
tools/psf2c/src/: CMakeLists.txt  codegen.c  codegen.h  file_io.c  file_io.h  main.c  psf.c
tools/psf2c/tests/: CMakeLists.txt  codegen_test.cpp  file_io_test.cpp  psf_test.cpp
tools/psf2c/tests/fixtures/: README.md
(+393 files in other folders)
