# Integration tests
project(tinyos-integration-tests)

# Integration test executables will be added here as they are created
# Example:
# add_executable(test_boot_integration test_boot.c)
# target_link_libraries(test_boot_integration boot kernel_obj)
# add_test(NAME test_boot_integration COMMAND test_boot_integration)
