[package]
name = "mdbook-side-notes"
version = "0.1.0"
edition = "2021"

[lib]
name = "mdbook_side_notes"
path = "src/lib.rs"

[[bin]]
name = "mdbook-side-notes"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
